--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+
 # Logs
 logs
 *.log
@@ -7,6 +8,7 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies
 node_modules
 dist
 dist-ssr
@@ -18,7 +20,11 @@ dist-ssr
 .idea
 .DS_Store
 *.suo
-*.ntvs*
+*.ntvs
 *.njsproj
 *.sln
 *.sw?
+
+# Environment variables
+.env
+.env.*
